--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Cities and towns -- Great Britain'
 - !lcc 'DA'
 - !lcsh 'Villages -- Great Britain'
+- GITenberg
 title: Our English Towns and Villages
 url: http://www.gutenberg.org/ebooks/45367
